--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
         <a class="nav-link" href="calendario.html">Calendarios</a>
         <a class="nav-link" href="equipo.html">Equipos</a>
         <a class="nav-link" href="voluntario.html">Voluntarios</a>
-        <a class="nav-link" href="preguntas.html" class="preguntas-padding"
-          >Preguntas</a
-        >
+        <a class="nav-link" href="preguntas.html">Preguntas</a>
       </div>
     </nav>
 
