mobile media queries completed

--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
       <div class="info-section">
         <div class="preguntas-section">
           <div class="preg-left-side">
-            <h2>Tienen una pregunta o buscan mas informacion?</h2>
-            <a class="preg-link" href="#">Primero visiten nuesta PF pagina!</a>
+            <h2>Buscan mas informacion?</h2>
+            <a class="preg-link" href="#"
+              >Primero visiten nuesta pagina de preguntas!</a
+            >
           </div>
           <div class="preg-right-side">
             <img class="preg-img" src="imgs/plays.jpg" alt="" />
@@ -118,10 +120,7 @@
           <div class="vol-right-side">
             <h2>Oportunidades para ser voluntario</h2>
             <p>¡Ven y únete como voluntario para ayudar!</p>
-            <p>
-              Necesitamos tu ayuda para hacer de la temporada de primavera de
-              2024 la mejor hasta ahora.
-            </p>
+
             <a class="vol-link" href="#">¡Descubre más aquí!</a>
           </div>
         </div>
@@ -129,9 +128,7 @@
     </div>
     <div id="sponser-section">
       <div class="banner">
-        <h2 class="sponser-banner-title">
-          Club Deportivo UDT agradece a sus patrocinadores
-        </h2>
+        <h2 class="sponser-banner-title">Gracis Patrocinadores</h2>
       </div>
       <div class="sponser-name-sections">
         <div class="left-names">
@@ -174,7 +171,7 @@
           <a href="https://www.facebook.com/ElFutbolesVidaUDT/?locale=es_LA">
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              height="5em"
+              height="2em"
               viewBox="0 0 512 512"
             >
               <path
