--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
         <img class="nav-img" src="imgs/logoOG.png" alt="" />
       </a>
       <div class="nav-links">
-        <a class="nav-link" href="calendario.html">Calendarios</a>
-        <a class="nav-link" href="equipo.html">Equipos</a>
-        <a class="nav-link" href="voluntario.html">Voluntarios</a>
-        <a class="nav-link" href="preguntas.html">Preguntas</a>
+        <a class="nav-link" href="calendario.html">Calendario</a>
+        <a class="nav-link" href="equipo.html">Equipo</a>
+        <a class="nav-link" href="voluntario.html">Voluntario</a>
+        <a class="nav-link" href="preguntas.html">Pregunta</a>
       </div>
     </nav>
 
     <div class="hero">
       <div class="banner">
         <div class="banner-top-left">
-          <h1>Sito Official Del</h1>
+          <h1>UNION DE TULA</h1>
         </div>
         <div class="banner-center">
           <img class="banner-logo" src="imgs/logomain.png" alt="" />
         </div>
         <div class="banner-top-right">
-          <h1>Deportivo UDT</h1>
+          <h1>F.C. DEPORTIVO</h1>
         </div>
       </div>
       <div class="img-container">
@@ -46,7 +46,7 @@
       </div>
     </div>
 
-    <div class="hero">
+    <div class="hero-cal">
       <div class="cal-banner">
         <h2 class="banner-main-title">Calendario</h2>
       </div>
@@ -101,57 +101,53 @@
     </div>
 
     <div id="info">
-      <div class="info-section">
-        <div class="preguntas-section">
-          <div class="preg-left-side">
-            <h2>Buscan mas informacion?</h2>
-            <a class="preg-link" href="#"
-              >Primero visiten nuesta pagina de preguntas!</a
-            >
-          </div>
-          <div class="preg-right-side">
-            <img class="preg-img" src="imgs/plays.jpg" alt="" />
-          </div>
+      <div class="vol-section">
+        <div class="vol-left-side">
+          <img class="vol-img" src="imgs/volunteers.jpg" alt="" />
         </div>
-        <div class="vol-section">
-          <div class="vol-left-side">
-            <img class="vol-img" src="imgs/volunteers.jpg" alt="" />
-          </div>
-          <div class="vol-right-side">
-            <h2>Oportunidades para ser voluntario</h2>
-            <p>¡Ven y únete como voluntario para ayudar!</p>
+        <div class="vol-right-side">
+          <h2>Oportunidades para ser voluntario.</h2>
+          <p>¡Ven y únete como voluntario para ayudar!</p>
 
-            <a class="vol-link" href="#">¡Descubre más aquí!</a>
-          </div>
+          <a class="vol-link" href="#">¡Descubre más aquí!</a>
+        </div>
+      </div>
+      <div class="preguntas-section">
+        <div class="preg-left-side">
+          <h2>Buscan mas informacion?</h2>
+          <a class="preg-link" href="#">Visiten nuesta pagina de preguntas!</a>
+        </div>
+        <div class="preg-right-side">
+          <img class="preg-img" src="imgs/plays.jpg" alt="" />
         </div>
       </div>
     </div>
     <div id="sponser-section">
       <div class="banner">
-        <h2 class="sponser-banner-title">Gracis Patrocinadores</h2>
+        <h2 class="sponser-banner-title">Gracias Patrocinadores</h2>
       </div>
       <div class="sponser-name-sections">
         <div class="left-names">
-          <p>Jesus Lopez "El Tornillo"</p>
-          <p>Paul Arechiga</p>
-          <p>Luis Acosta "La Piedra"</p>
           <p>Álavro Arechiga</p>
-          <p>Miguel Angel Pérez "Chabelo"</p>
-          <p>Luis "La Perra" ♰</p>
+          <p>Antonio Moreno "El Sabritas"</p>
+          <p>Arturo Javier González "El Potrito"</p>
+          <p>Christian Brambila</p>
           <p>Diego Contreras</p>
-          <p>Maxi Morales</p>
-          <p>Roberto Moreno</p>
+          <p>Edgar Ivan González "El Peque"</p>
+          <p>Jesus Lopez "El Tornillo"</p>
+          <p>Keith Rincón</p>
+          <p>Luis Acosta "La Piedra"</p>
         </div>
         <div class="right-names">
-          <p>Antonio Moreno "El Sabritas"</p>
-          <p>Sergio Medina</p>
-          <p>Edgar Ivan González "El Peque"</p>
-          <p>Raul Díaz Cobarrubias</p>
-          <p>Arturo Javier González "El Potrito"</p>
-          <p>Keith Rincón</p>
-          <p>Pablo Vásquez</p>
+          <p>Luis "La Perra" ♰</p>
+          <p>Maxi Morales</p>
+          <p>Miguel Angel Pérez "Chabelo"</p>
           <p>Noé Ruelas</p>
-          <p>Christian Brambila</p>
+          <p>Pablo Vásquez</p>
+          <p>Paul Arechiga</p>
+          <p>Raul Díaz Cobarrubias</p>
+          <p>Roberto Moreno</p>
+          <p>Sergio Medina</p>
         </div>
       </div>
     </div>
@@ -164,16 +160,12 @@
           <h2>Siguenos</h2>
           <h2>#ElFutbolEsVida</h2>
           <p class="copyright">
-            ©2024 UDT Deportivo. Todos los derechos reservados
+            ©2024 Club Deportivo UDT. Todos derechos reservados.
           </p>
         </div>
         <div class="facebook-container">
           <a href="https://www.facebook.com/ElFutbolesVidaUDT/?locale=es_LA">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              height="2em"
-              viewBox="0 0 512 512"
-            >
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
               <path
                 d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"
               />
