--- a/index.html
+++ b/index.html
@@ -10,13 +10,49 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,900;1,400;1,500;1,900&display=swap"
       rel="stylesheet"
     />
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    /> -->
+
     <title>UDT Club</title>
   </head>
 
   <body>
-    <nav class="nav-container">
+    <!-- nav-->
+    <nav class="navbarr">
+      <div class="nav-centerr">
+        <!-- header-->
+        <div class="nav-headerr">
+          <a href="index.html" class="nav-logoo">
+            <img src="imgs/logoOG.png" alt="Logo del UDT Deportivo" />
+          </a>
+          <button type="button" class="btn nav-btnn">
+            <i class="fa-solid fa-bars"></i>
+          </button>
+        </div>
+        <!-- nav-links -->
+        <div class="nav-linkss">
+          <a class="nav-linkk" href="index.html">Home</a>
+          <a class="nav-linkk" href="calendario.html">Calendario</a>
+          <a class="nav-linkk" href="equipo.html">Equipo</a>
+          <a class="nav-linkk" href="voluntario.html">Voluntario</a>
+          <a class="nav-linkk" href="preguntas.html">Pregunta</a>
+        </div>
+      </div>
+    </nav>
+    <!-- end of nav -->
+
+    <!-- <nav class="nav-container">
       <a class="nav-logo" href="">
-        <img class="nav-img" src="imgs/logoOG.png" alt="" />
+        <img
+          class="nav-img"
+          src="imgs/logoOG.png"
+          alt="Logo del UDT Deportivo"
+        />
       </a>
       <div class="nav-links">
         <a class="nav-link" href="calendario.html">Calendario</a>
@@ -24,7 +60,7 @@
         <a class="nav-link" href="voluntario.html">Voluntario</a>
         <a class="nav-link" href="preguntas.html">Pregunta</a>
       </div>
-    </nav>
+    </nav> -->
 
     <div class="hero">
       <div class="banner">
@@ -439,4 +475,8 @@
     </footer> -->
   </body>
   <script src="index.js"></script>
+  <script
+    src="https://kit.fontawesome.com/99a2bb4691.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
